# nanospectrum

./: CMakeLists.txt  CTestConfig.cmake  INSTALL.md  README.md
cmake/: NanoSpectrumConfig.cmake.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  commandlineoptions.h  commandlineparser.cpp  commandlineparser.h  gui.cpp  gui.h  mainwindow.cpp  mainwindow.h
src/gui/i18n/: gui_en.ts  gui_ru.ts
src/model/: CMakeLists.txt  common.h  model.cpp  model.h  plugin.cpp  plugin.h  pluginstorage.cpp  pluginstorage.h
src/plugins/: CMakeLists.txt
tests/: CMakeLists.txt
